# Scrap-immo

./: .env.example  .gitignore
.claude/: launch.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  dashboard.py  kanban.py  leads.py  listings.py  router.py  scraper_ctrl.py  settings.py
backend/app/models/: __init__.py  config.py  kanban_column.py  lead.py  listing.py  scrape_run.py  user.py
backend/app/schemas/: config.py  lead.py  listing.py
backend/app/services/: auth.py  commission.py  dedup.py  gdpr.py  lead_service.py
backend/app/services/analysis/: pipeline.py  price_gap.py  pro_detector.py  republication.py  strategic_advisor.py  urgency.py
backend/scraper/: anti_bot.py  base.py  events.py  models.py  registry.py  runner.py  scheduler.py
backend/scraper/sites/: avendrealouer.py  bienici.py  entreparticuliers.py  leboncoin.py  logicimmo.py  pap.py  paruvendu.py  seloger.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  LeadCard.tsx  Toast.tsx
frontend/src/pages/: DashboardPage.tsx  KanbanPage.tsx  LeadDetail.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
scripts/: run_scrape.py
