[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrap-immo"
version = "0.1.0"
description = "Scraping immobilier pour mandataires - leads particuliers"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "playwright>=1.49",
    "apscheduler>=3.10,<4",
    "blinker>=1.9",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scraper"]
